[#OMG] Improve support for mappings, Jena-based OWL parsing